--- a/style/style.css
+++ b/style/style.css
@@ -196,7 +196,8 @@ a.search-page {
 	font-size:0;
 }
 
-.main-nav li {
+.main-nav > li {
+	position:relative;
 	font-size:18px;
 	color:#fff;
 	text-transform:capitalize;
@@ -205,20 +206,27 @@ a.search-page {
 	font-weight:500;
 }
 
-.main-nav li + li {
-	margin-left:30px;
-}
-
-.main-nav li span {
-	font-weight:normal;
-	font-size:16px;
-}
-
-.main-nav li span:before {
+.main-nav > li > a {
+	padding:0 15px 30px;
 	display:block;
 }
 
-.main-nav li:first-of-type {
+.main-nav > li > a {
+	display:block;
+}
+
+.main-nav > li > a > span {
+	font-weight:normal;
+	font-size:18px;
+	display:block;
+}
+
+.main-nav > li > a > span:before {
+	display:block;
+	line-height:1.6;
+}
+
+.main-nav > li:first-of-type {
 	color:#e8b75b;
 	margin-right:30px;
 }
@@ -240,6 +248,29 @@ a.search-page {
 	position:relative;
 }
 
+.search-suggestions {
+	display:none;
+	position:absolute;
+	top:100%;
+	left:0;
+	right:0;
+	background:#161823;
+	padding:20px 0;
+	z-index:99;
+	list-style:none;
+}
+
+.search-suggestions li a {
+	padding:10px 20px;
+	display:block;
+	color:#686a71;
+	font-size:18px;
+}
+
+.search-suggestions li a:hover {
+	color:#fff;
+}
+
 .firmware-search-form input[type=search] {
 	position:relative;
 	z-index:3;
@@ -259,6 +290,10 @@ a.search-page {
 	padding:10px 40px 20px 0;
 }
 
+.firmware-search-form input[type=search]:focus ~ .search-suggestions {
+	display:block;
+}
+
 .firmware-search-form label {
 	position:absolute;
 	top:0;
@@ -268,17 +303,17 @@ a.search-page {
 	padding:10px 0;
 	font-size:18px;
 	cursor:text;
-	-moz-transition:all 0.15s;
-	-webkit-transition:all 0.15s;
-	-ms-transition:all 0.15s;
-	-o-transition:all 0.15s;
-	transition:all 0.15s;
 }
 
 .firmware-search-form input[type=search]:focus + label,
 .firmware-search-form input[type=search]:valid + label {
 	opacity:0;
 	z-index:1;
+}
+
+.firmware-search-form input[type=search]:focus,
+.firmware-search-form input[type=search]:valid {
+	color:#fff;
 }
 
 .firmware-search-form label span.updato-help {
@@ -288,6 +323,7 @@ a.search-page {
 	line-height:14px;
 	font-size:10px;
 	border:1px solid #7d7f89;
+	cursor:pointer;
 	border-radius:100%;
 	text-align:center;
 	vertical-align:baseline;
@@ -325,39 +361,10 @@ a.search-page {
 	color:#5dbeb2;
 }
 
-.unlock-phone-container .custom-select {
+.unlock-phone-container .custom-select-container {
 	width:100%;
 	max-width:270px;
 	margin-top:30px;
-}
-
-.custom-select {
-	position:relative;
-}
-
-.custom-select select {
-	border:2px solid #454857;
-	border-radius:2px;
-	width:100%;
-	-moz-appearance:none;
-	-o-appearance:none;
-	background:none;
-	-ms-appearance:none;
-	-webkit-appearance:none;
-	appearance:none;
-	padding:10px;
-	font-size:16px;
-	color:#b2b3ba;
-}
-
-.custom-select span.updato-arrow-down {
-	color:#b2b3ba;
-	font-size:12px;
-	display:block;
-	position:absolute;
-	right:15px;
-	top:15px;
-	pointer-events:none;
 }
 
 .f-post-img span {
@@ -430,6 +437,7 @@ a.search-page {
 }
 
 .post-item {
+	cursor:pointer;
 	float:left;
 	width:23.50%;
 	margin-left:2%;
@@ -482,6 +490,12 @@ a.search-page {
 	color:#5a8de2;
 	vertical-align:baseline;
 	font-size:10px;
+	margin-right:5px;
+}
+
+.view-all-btn a:hover span {
+	margin-left:5px;
+	margin-right:0;
 }
 
 .view-all-btn {
@@ -514,4 +528,608 @@ a.search-page {
 	padding:60px 0;
 	background:#fbfbfc;
 	border-top:6px solid #f5f5f7;
+}
+
+.section-title2 {
+	font-weight:500;
+	text-transform:uppercase;
+	font-size:28px;
+	color:#313448;
+	float:left;
+}
+
+.section-title2 span {
+	font-family:'Haiku', 'Proxima Nova', Arial, Helvetica, sans-serif;
+	font-size:38px;
+	font-weight:normal;
+	text-transform:none;
+}
+
+a.join-discussion-btn,
+.load-more-btn a {
+	border:2px solid #e1e1e2;
+	border-radius:5px;
+	padding:10px 40px;
+	margin-top:10px;
+	float:right;
+	display:block;
+	color:#767373;
+	font-size:16px;
+}
+
+a.join-discussion-btn:hover,
+.load-more-btn a:hover {
+	border-color:#a8a7a7;
+}
+
+.load-more-btn a {
+	min-width:220px;
+	float:none;
+	display:inline-block;
+}
+
+.load-more-btn {
+	padding-top:40px;
+	text-align:center;
+}
+
+.forum-cat {
+	width:200px;
+	float:left;
+}
+
+.forum-meta-info {
+	padding:0 210px 0 260px;
+	position:relative;
+}
+
+.forum-comments {
+	font-size:12px;
+	color:#8e8c8c;
+	text-transform:uppercase;
+	position:absolute;
+	top:0;
+	right:0;
+	padding-right:60px;
+	max-width:200px;
+}
+
+.forum-item-list li {
+	overflow:hidden;
+	padding:6px 0 40px;
+	position:relative;
+}
+
+.forum-item-list li:last-of-type:before {
+	bottom:auto;
+	height:6px;
+}
+
+.forum-item-list li:first-of-type:before {
+	top:10px;
+}
+
+.forum-item-list {
+	margin-top:60px;
+	list-style:none;
+}
+
+.forum-cat {
+	text-align:right;
+	position:relative;
+	z-index:3;
+	margin-top:-6px;
+}
+
+.forum-cat p {
+	display:inline-block;
+	color:#fff;
+	font-size:11px;
+	background:#767373;
+	font-weight:500;
+	text-transform:uppercase;
+	border-radius:3px;
+}
+
+.forum-cat p a {
+	display:block;
+	padding:6px 10px 4px;
+}
+
+.forum-title {
+	font-weight:normal;
+	font-size:18px;
+}
+
+.forum-date {
+	display:block;
+	font-size:12px;
+	text-transform:uppercase;
+	color:#8e8c8c;
+}
+
+.forum-comments .forum-last-reply {
+	display:block;
+}
+
+.forum-last-reply span {
+	font-weight:bold;
+}
+
+.forum-item-list li:before {
+	display:block;
+	width:3px;
+	top:0px;
+	bottom:-6px;
+	position:absolute;
+	background:#ebebec;
+	content:"";
+	left:230px;
+}
+
+.forum-item-list li:after {
+	content:"";
+	display:block;
+	height:10px;
+	width:10px;
+	border-radius:100%;
+	background:#fff;
+	border:3px solid #ebebec;
+	position:absolute;
+	left:223px;
+	top:6px;
+}
+
+.forum-cat p.blue-bg {
+	background:#5a8de2;
+}
+
+.forum-cat p.teal-bg {
+	background:#87cee0;
+}
+
+.forum-cat p.yellow-bg {
+	background:#5dbeb2;
+}
+
+.forum-cat p.green-bg {
+	background:#e8b75b;
+}
+
+.forum-cat p.red-bg {
+	background:#de5350;
+}
+
+.footer {
+	padding:110px 60px 30px;
+	background:#222537;
+}
+
+.footer .logo {
+	float:none;
+}
+
+.foot-nav li {
+	color:#a8a7a7;
+	font-size:12px;
+	text-transform:uppercase;
+	display:inline-block;
+}
+
+.foot-nav li + li {
+	margin-left:20px;
+}
+
+.foot-nav li:first-of-type {
+	margin-right:10px;
+}
+
+.foot-nav {
+	margin-top:15px;
+	list-style:none;
+}
+
+.legal-info {
+	font-size:12px;
+	color:#434751;
+	float:left;
+}
+
+.bottom-footer {
+	padding-top:60px;
+}
+
+.foot-social-nav {
+	float:right;
+	list-style:none;
+}
+
+.foot-social-nav li {
+	display:inline-block;
+	color:#666872;
+	vertical-align:middle;
+	font-size:20px;
+}
+
+.foot-social-nav li:hover {
+	color:#a8a7a7;
+}
+
+.foot-social-nav li + li {
+	margin-left:40px;
+}
+
+.mobile-menu {
+	display:none;
+}
+
+.banner-home .f-post-info h3 {
+	color:#fff;
+}
+
+.banner-home .f-post-info {
+	padding-right:147px;
+}
+
+.categories-page {
+	padding-top:40px;
+}
+
+.foot-nav li:hover {
+	color:#fff;
+}
+
+.view-all-btn a span,
+.firmware-search-form label,
+.foot-social-nav li,
+.foot-nav li,
+a.join-discussion-btn,
+.sub-nav li,
+.search-suggestions li a {
+	-moz-transition:all 0.2s;
+	-o-transition:all 0.2s;
+	-ms-transition:all 0.2s;
+	-webkit-transition:all 0.2s;
+	transition:all 0.2s;
+}
+
+.main-search {
+	background:#2b2f44;
+	position:absolute;
+	top:0;
+	left:0;
+	right:0;
+	display:none;
+}
+
+.main-search .m-search-btn,
+.main-search .close-search {
+	position:absolute;
+	top:23px;
+	font-size:18px;
+	left:60px;
+	color:#fff;
+	z-index:3;
+	background:none;
+}
+
+.main-search .close-search {
+	left:auto;
+	right:60px;
+}
+
+.main-search input {
+	width:100%;
+	background:none;
+	padding:20px 100px;
+	color:#c0c1c7;
+	font-size:18px;
+}
+
+.forum-title:hover a,
+.post-item:hover .post-title a {
+	text-decoration:underline;
+}
+
+.sub-nav {
+	position:absolute;
+	top:100%;
+	left:0;
+	background:#2d3041;
+	list-style:none;
+	text-align:left;
+	width:250px;
+	display:none;
+	padding:20px 0;
+}
+
+.sub-nav li a {
+	display:block;
+	padding:10px 30px;
+}
+
+.sub-nav li {
+	color:#9698a0;
+}
+
+.sub-nav li:hover {
+	color:#fff;
+}
+
+.main-nav > li > a:hover:before {
+	position:absolute;
+	height:3px;
+	top:-15px;
+	left:0;
+	content:"";
+	right:0;
+	background:#91929b;
+}
+
+.main-nav > li.active > a:before {
+	position:absolute;
+	height:3px;
+	top:-15px;
+	left:0;
+	content:"";
+	right:0;
+	background:#fff;
+}
+
+.main-nav > li > a:first-of-type:nth-last-child(2):before {
+	position:absolute;
+	content:"";
+	height:3px;
+	top:-15px;
+	left:0;
+	right:0;
+	background:#fff;
+	display:none;
+}
+
+.main-nav > li:hover > a:first-of-type:nth-last-child(2):before,
+.main-nav > li:hover .sub-nav {
+	display:block;
+}
+
+.chosen-drop {
+	display:none;
+	position:absolute;
+	top:0;
+	left:0;
+	right:0;
+	z-index:9999;a
+}
+
+.chosen-container {
+	width:100%!important;
+	position:relative;
+}
+
+a.chosen-single,
+.custom-select-container select {
+	display:block;
+	border:3px solid #414453;
+	border-radius:4px;
+	background:none;
+	padding:10px 30px 10px 20px;
+	color:#bdbec3;
+	font-size:18px;
+	cursor:pointer;
+}
+
+.custom-select-container select {
+	width:100%;
+}
+
+a.chosen-single:hover {
+	border-color:#4a4f60;
+}
+
+a.chosen-single div b:before {
+	content:"\69";
+	font-family:'updato-fonts';
+	font-size:12px;
+	display:block;
+	position:absolute;
+	top:18px;
+	right:15px;
+}
+
+.chosen-with-drop .chosen-drop {
+	display:block;
+}
+
+.chosen-search-input {
+	width:100%;
+	background:none;
+	border:3px solid #414453;
+	padding:10px 30px 10px 20px;
+	color:#fff;
+	font-size:18px;
+	border-radius:4px;
+	background:#161823;
+}
+
+.chosen-results {
+	border-radius:4px;
+	list-style:none;
+	background:#161823;
+	padding:10px 0;
+	margin-top:10px;
+	max-height:550px;
+	overflow-x:hidden;
+	overflow-y:auto;
+}
+
+.chosen-results li {
+	padding:10px 20px;
+	cursor:pointer;
+	color:#8b8c91;
+	font-size:18px;
+}
+
+.custom-scrollbar {
+	max-height:400px;
+	overflow:auto;
+	width:100%;
+	background:red;
+}
+
+.overflowed {
+	height:5000px;
+}
+
+.mCustomScrollBox {
+	height:100%;
+	position:relative;
+	overflow:hidden;
+	max-width:100%;
+}
+
+.mCSB_container {
+	height:auto;
+	width:auto;
+	overflow:hidden;
+}
+
+.mCSB_inside > .mCSB_container {
+	margin-right:30px;
+}
+
+.mCSB_scrollTools {
+	bottom:10px;
+	top:10px;
+	right:0;
+	width:10px;
+	position:absolute;
+	cursor:pointer;
+}
+
+.mCSB_scrollTools .mCSB_draggerContainer {
+	top:0;
+	right:0;
+	bottom:0;
+	left:0;
+	position:absolute;
+	height:auto;
+}
+
+.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar {
+	background:#414453;
+	width:6px;
+	position:relative;
+	height:100%;
+	border-radius:10px;
+}
+
+.banner-article {
+	background:#69649e;
+	padding:330px 0 90px;
+}
+
+.article-title {
+	font-size:48px;
+	color:#fff;
+	line-height:1.2;
+}
+
+.article-author {
+	font-weight:500;
+	color:#fff;
+	font-size:22px;
+	opacity:0.60;
+	margin-top:30px;
+}
+
+.article-info {
+	max-width:880px;
+}
+
+.banner-article .wrapper {
+	position:relative;
+}
+
+.article-bg {
+	position:absolute;
+	bottom:0;
+	right:-50px;
+}
+
+.article-social {
+	width:58px;
+	list-style:none;
+	position:absolute;
+	top:120px;
+	left:0;
+}
+
+.article-social span {
+	width:58px;
+	height:58px;
+	border:2px solid;
+	line-height:56px;
+	font-size:24px;
+	text-align:center;
+	display:block;
+	border-radius:100%;
+}
+
+.article-social li {
+	margin-top:20px;
+}
+
+.article-social span:before {
+	display:block;
+	line-height:56px;
+}
+
+.article-social span.updato-facebook-alternative {
+	color:#4b75bd;
+	border-color:#4b75bd;
+}
+
+.article-social span.updato-twitter {
+	color:#00c6ff;
+	border-color:#00c6ff;
+}
+
+.article-social span.updato-google-plus {
+	color:#fb5244;
+	border-color:#fb5244;
+}
+
+.article-content .wrapper {
+	padding-left:100px;
+	position:relative;
+	min-height:370px;
+}
+
+.main-article-content p {
+	font-size:18px;
+	color:#313346;
+	margin-top:40px;
+}
+
+.main-article-content h2 {
+	margin-top:40px;
+	font-size:28px;
+	color:#313346;
+}
+
+.main-article-content a {
+	color:#598cdf;
+}
+
+.main-article-content a:hover {
+	text-decoration:underline;
+}
+
+.main-article {
+	width:66%;
+	float:left;
+}
+
+.similar-posts {
+	padding-top:40px;
 }
