--- a/style/style.css
+++ b/style/style.css
@@ -126,6 +126,7 @@ img {
 }
 
 body {
+	overflow-x:hidden;
 	font-family:'Proxima Nova', Arial, Helvetica, sans-serif;
 	line-height:1.6;
 }
@@ -174,6 +175,7 @@ a:link {
 }
 
 .banner-home {
+	border-bottom:6px solid #f5f5f7;
 	padding:220px 0 190px;
 }
 
@@ -279,13 +281,9 @@ a.search-page {
 	border:0;
 	color:#7d7f89;
 	font-size:18px;
-	background:-moz-repeating-linear-gradient(45deg, #494b5a, #494b5a 1px, transparent 1px, transparent 2px);
-	background:-webkit-repeating-linear-gradient(45deg, #494b5a, #494b5a 1px, transparent 1px, transparent 2px);
-	background:-ms-repeating-linear-gradient(45deg, #494b5a, #494b5a 1px, transparent 1px, transparent 2px);
-	background:-o-repeating-linear-gradient(45deg, #494b5a, #494b5a 1px, transparent 1px, transparent 2px);
-	background:repeating-linear-gradient(45deg, #494b5a, #494b5a 1px, transparent 1px, transparent 2px);
-	background-size:100% 8px;
-	background-repeat:no-repeat;
+	background:url(../images/bg-pattern.png);
+	background-size:auto 8px;
+	background-repeat:repeat-x;
 	background-position:left bottom;
 	padding:10px 40px 20px 0;
 }
@@ -316,7 +314,8 @@ a.search-page {
 	color:#fff;
 }
 
-.firmware-search-form label span.updato-help {
+.firmware-search-form label span.updato-help,
+.links-list-left .updato-help {
 	display:inline-block;
 	width:16px;
 	height:16px;
@@ -352,12 +351,14 @@ a.search-page {
 	float:right;
 }
 
-.unlock-phone-container p {
+.unlock-phone-container p,
+.unlock-info {
 	font-size:21px;
 	color:#fff;
 }
 
-.unlock-phone-container p span {
+.unlock-phone-container p span,
+.unlock-info span {
 	color:#5dbeb2;
 }
 
@@ -621,7 +622,8 @@ a.join-discussion-btn:hover,
 	margin-top:-6px;
 }
 
-.forum-cat p {
+.forum-cat p,
+.forum-cat-name {
 	display:inline-block;
 	color:#fff;
 	font-size:11px;
@@ -631,7 +633,8 @@ a.join-discussion-btn:hover,
 	border-radius:3px;
 }
 
-.forum-cat p a {
+.forum-cat p a,
+.forum-cat-name a {
 	display:block;
 	padding:6px 10px 4px;
 }
@@ -680,23 +683,28 @@ a.join-discussion-btn:hover,
 	top:6px;
 }
 
-.forum-cat p.blue-bg {
+.forum-cat p.blue-bg,
+.forum-cat-name.blue-bg {
 	background:#5a8de2;
 }
 
-.forum-cat p.teal-bg {
+.forum-cat p.teal-bg,
+.forum-cat-name.teal-bg {
 	background:#87cee0;
 }
 
-.forum-cat p.yellow-bg {
+.forum-cat p.yellow-bg,
+.forum-cat-name.yellow-bg {
 	background:#5dbeb2;
 }
 
-.forum-cat p.green-bg {
+.forum-cat p.green-bg,
+.forum-cat-name.green-bg {
 	background:#e8b75b;
 }
 
-.forum-cat p.red-bg {
+.forum-cat p.red-bg,
+.forum-cat-name.red-bg {
 	background:#de5350;
 }
 
@@ -785,7 +793,8 @@ a.join-discussion-btn:hover,
 .foot-nav li,
 a.join-discussion-btn,
 .sub-nav li,
-.search-suggestions li a {
+.search-suggestions li a,
+.custom-toggle-switch:after {
 	-moz-transition:all 0.2s;
 	-o-transition:all 0.2s;
 	-ms-transition:all 0.2s;
@@ -969,17 +978,6 @@ a.chosen-single div b:before {
 	font-size:18px;
 }
 
-.custom-scrollbar {
-	max-height:400px;
-	overflow:auto;
-	width:100%;
-	background:red;
-}
-
-.overflowed {
-	height:5000px;
-}
-
 .mCustomScrollBox {
 	height:100%;
 	position:relative;
@@ -1024,6 +1022,7 @@ a.chosen-single div b:before {
 }
 
 .banner-article {
+	border-bottom:6px solid #f5f5f7;
 	background:#69649e;
 	padding:330px 0 90px;
 }
@@ -1061,7 +1060,7 @@ a.chosen-single div b:before {
 	list-style:none;
 	position:absolute;
 	top:120px;
-	left:0;
+	left:15px;
 }
 
 .article-social span {
@@ -1132,4 +1131,992 @@ a.chosen-single div b:before {
 
 .similar-posts {
 	padding-top:40px;
+}
+
+.similar-posts-container .post-item,
+.similar-posts-container .post-item:nth-of-type(4n+1) {
+	width:32%;
+	margin-left:2%;
+	clear:none;
+}
+
+.similar-posts-container .post-item:nth-of-type(3n+1) {
+	clear:left;
+	margin-left:0;
+}
+
+.similar-posts-container {
+	padding-bottom:80px;
+}
+
+.sidebar {
+	float:right;
+	width:28%;
+	padding-top:60px;
+}
+
+.sidebar .section-title2 {
+	float:none;
+}
+
+.popular-posts-list {
+	list-style:none;
+}
+
+.popular-posts-list .post-title,
+.popular-posts-list .post-date {
+	padding-left:0;
+	padding-right:0;
+}
+
+.popular-posts-list li + li {
+	border-top:5px solid #f5f5f7;
+}
+
+.popular-posts-list .post-title {
+	font-weight:500;
+}
+
+.popular-posts-list li a:hover .post-title {
+	text-decoration:underline;
+}
+
+.search-listing {
+	padding:20px 0 60px;
+}
+
+.search-listing .post-item {
+	margin-top:40px;
+}
+
+.search-title {
+	font-size:48px;
+	text-align:center;
+	color:#bbbcc2;
+	text-transform:uppercase;
+}
+
+.search-title span {
+	color:#fff;
+}
+
+.banner-search {
+	border-bottom:6px solid #f5f5f7;
+	padding-bottom:130px;
+}
+
+.unlock-title {
+	font-size:40px;
+	font-weight:500;
+	color:#fff;
+	text-transform:capitalize;
+	text-align:center;
+}
+
+.banner-unlock {
+	padding:170px 0 130px;
+}
+
+.unlock-model-options .custom-select-container {
+	display:inline-block;
+	max-width:50%;
+	width:265px;
+	margin:0 5px;
+	text-align:left;
+}
+
+.unlock-model-options {
+	text-align:center;
+	padding-top:100px;
+}
+
+.unlock-model-options a.chosen-single,
+.unlock-model-options .custom-select-container select,
+.unlock-model-options .chosen-search-input {
+	padding-top:5px;
+	padding-bottom:5px;
+	border:0;
+}
+
+.unlock-model-options a.chosen-single,
+.unlock-model-options .custom-select-container select {
+ 	background:#272a3b;
+ }
+
+.unlock-model-options a.chosen-single div b::before {
+ 	top:9px;
+}
+
+.unlock-info {
+	color:#bbbcc2;
+	margin-top:60px;
+}
+
+.number {
+	width:34px;
+	height:34px;
+	display:block;
+	background:#e8b75b;
+	border-radius:100%;
+	line-height:34px;
+	font-size:12px;
+	font-weight:bold;
+	color:#fff;
+	text-align:center;
+	margin:0 auto;
+}
+
+.unlock-steps li {
+	display:inline-block;
+	text-align:center;
+	position:relative;
+	z-index:2;
+}
+
+.unlock-steps {
+	font-size:1px;
+	position:relative;
+	text-align:justify;
+	list-style:none;
+	max-width:900px;
+	width:100%;
+	margin:-19px auto 0;
+}
+
+.unlock-steps p {
+	font-size:12px;
+	font-weight:500;
+	margin-top:10px;
+	color:#8d8c8c;
+	text-transform:uppercase;
+}
+
+.step1 .number {
+	background:#5dbeb2;
+}
+
+.unlock-steps:before {
+	content:"";
+	display:block;
+	position:absolute;
+	top:13px;
+	left:40px;
+	right:45px;
+	height:6px;
+	background:-moz-linear-gradient(left, #5dbeb2 0%, #e8b75b 50%, #e8b75b 100%);
+}
+
+.unlock-steps:after {
+	content:"";
+	display:inline-block;
+	width:100%;
+}
+
+.main-unlock-title {
+	font-size:28px;
+	color:#202537;
+	font-weight:normal;
+	text-align:center;
+	margin-top:90px;
+}
+
+.main-unlock-title span {
+	font-weight:500;
+}
+
+.main-unlock-subtitle {
+	color:#90929a;
+	font-size:15px;
+	text-align:center;
+	text-transform:uppercase;
+}
+
+.main-unlock-subtitle span {
+	font-weight:500;
+}
+
+.col4 {
+	margin-left:2%;
+	float:left;
+	width:23.5%;
+}
+
+.col4:nth-of-type(4n+1) {
+	clear:left;
+	margin-left:0;
+}
+
+.features-item {
+	border:2px solid #f5f5f7;
+	border-radius:5px;
+	padding:100px 25px 120px;
+}
+
+.unlock-features {
+	padding:70px 0 140px;
+}
+
+.features-item h3 {
+	color:#202537;
+	font-size:21px;
+	font-weight:normal;
+	margin-top:20px;
+}
+
+.features-item p {
+	color:#a6a5a5;
+	font-size:18px;
+	margin-top:5px;
+}
+
+.comodo-seal {
+	display:block;
+	margin:0 auto 40px;
+}
+
+.col3 {
+	width:32%;
+	margin-left:2%;
+	float:left;
+}
+
+.col3:nth-of-type(3n+1) {
+	clear:left;
+	margin-left:0;
+}
+
+.banner-unlock .firmware-search-form {
+	max-width:666px;
+	width:100%;
+	margin:0 auto;
+}
+
+.banner-unlock .firmware-search-form input[type="search"] {
+	background:none;
+	padding:10px 40px 10px 0;
+}
+
+.firmware-search-info {
+	margin-top:60px;
+	color:#858690;
+	font-weight:normal;
+	font-style:italic;
+	text-align:center;
+	letter-spacing:1px;
+}
+
+.firmware-search-info span {
+	color:#52a19a;
+	font-style:normal;
+}
+
+.smart-search-container {
+	width:40%;
+	float:left;
+	margin-top:10px;
+}
+
+.custom-toggle-switch {
+	width:40px;
+	height:20px;
+	display:inline-block;
+	background:#4e515f;
+	border-radius:20px;
+	position:relative;
+	vertical-align:middle;
+	margin-left:20px;
+	margin-top:-6px;
+}
+
+.custom-toggle-switch:after {
+	content:"";
+	width:28px;
+	height:28px;
+	left:0;
+	top:0;
+	position:absolute;
+	display:block;
+	background:#a8a7a7;
+	border-radius:100%;
+	margin-top:-4px;
+}
+
+.custom-toggle input:checked ~ .custom-toggle-switch:after {
+	background:#5dbeb2;
+	left:100%;
+	margin-left:-28px;
+}
+
+.custom-toggle input {
+	position:absolute;
+	top:0;
+	left:0;
+	opacity:0;
+	z-index:-1;
+}
+
+.custom-toggle label,
+.smart-search-options label {
+	position:relative;
+	display:inline-block;
+	font-weight:500;
+	font-size:12px;
+	color:#fff;
+	text-transform:uppercase;
+	margin-top:25px;
+	cursor:pointer;
+}
+
+.smart-search-options {
+	float:right;
+	width:50%;
+}
+
+.region-search,
+.version-search {
+	width:40%;
+	float:left;
+}
+
+.version-search {
+	margin-left:2%;
+}
+
+.items-search {
+	width:16%;
+	float:left;
+	margin-left:2%;
+}
+
+.smart-search-options label {
+	margin:0;
+}
+
+.banner-firmware-results {
+	padding:150px 0 60px;
+}
+
+.dataTable {
+	width:100%;
+	border-collapse:collapse;
+}
+
+.dataTable th {
+	padding:10px 20px;
+	text-align:left;
+}
+
+.dataTable td {
+	padding:20px;
+}
+
+.dataTable th {
+	font-weight:500;
+	font-size:14px;
+	color:#434751;
+	text-transform:uppercase;
+	border-bottom:5px solid #5dbeb2;
+}
+
+.dataTable th span.updato-sort {
+	font-size:12px;
+}
+
+.dataTable td {
+	font-size:18px;
+	color:#8d8c8c;
+}
+
+.dataTable tbody tr:nth-of-type(odd) {
+	background:#fbfbfc;
+}
+
+.data-tables {
+	padding:60px 0 120px;
+}
+
+.page-count {
+	text-align:right;
+	font-size:14px;
+	color:#8d8c8c;
+	margin-top:10px;
+	text-transform:uppercase;
+}
+
+.dataTable tbody tr:hover {
+	background:#f5f5f7;
+}
+
+.dataTable tbody tr:hover td {
+	color:#1b202c;
+}
+
+.firmware-meta {
+	background:url(../images/bg-pattern.png);
+	background-size:auto 8px;
+	background-repeat:repeat-x;
+	background-position:left bottom;
+	padding:10px 0 20px 0;
+}
+
+.firmware-model {
+	float:left;
+	max-width:50%;
+	font-weight:500;
+	font-size:28px;
+	color:#fff;
+}
+
+.firmware-model-info {
+	color:#a9aaae;
+	margin-top:15px;
+	font-size:18px;
+	float:right;
+	text-align:right;
+}
+
+.time-icon {
+	vertical-align:middle;
+	margin-top:-5px;
+	margin-right:5px;
+}
+
+.f-firmware-version {
+	font-weight:500;
+	color:#5dbeb2;
+}
+
+.seperator {
+	margin:0 30px;
+}
+
+.links-list-left .updato-help:before {
+	font-size:8px;
+}
+
+.links-list-left,
+.links-list-right {
+	list-style:none;
+	margin-top:20px;
+	float:left;
+	max-width:50%;
+}
+
+.links-list-left {
+	margin-top:30px;
+}
+
+.links-list-right {
+	float:right;
+}
+
+.links-list-left li,
+.links-list-right li {
+	color:#8e9099;
+	font-size:12px;
+	font-weight:500;
+	display:inline-block;
+}
+
+.links-list-left li + li,
+.links-list-right li + li {
+	margin-left:10px;
+}
+
+.links-list-left li:hover {
+	color:#fff;
+}
+
+.links-list-left li:hover span {
+	border-color:#fff;
+}
+
+.links-list-right li {
+	color:#e8b75b;
+}
+
+.links-list-right li:hover {
+	color:#edc781;
+}
+
+.links-list-right a.download-btn {
+	color:#fff;
+	display:block;
+	background:#de5350;
+	padding:10px 40px;
+	border-radius:5px;
+}
+
+.links-list-right a.download-btn:hover {
+	background:#e95e5a;
+}
+
+.banner-firmware-download {
+	padding:270px 0 180px;
+}
+
+.download-info {
+	max-width:600px;
+	margin:60px auto;
+}
+
+.download-info-title {
+	padding:10px;
+	color:#313347;
+	font-size:18px;
+	font-weight:500;
+	text-transform:uppercase;
+	border-bottom:3px solid #5dbeb2;
+}
+
+.download-details {
+	box-shadow:0 1px 1px rgba(152,154,159,0.4);
+	list-style:none;
+}
+
+.download-details li {
+	padding:20px;
+}
+
+.download-details li:nth-of-type(odd) {
+	background:#fbfbfc;
+}
+
+.d-detail-title {
+	font-size:18px;
+	color:#8c8c8c;
+	float:left;
+	width:49%;
+}
+
+.download-details li:before,
+.download-details li:after {
+	content:"";
+	display:table;
+	clear:both;
+}
+
+.d-detail {
+	font-size:18px;
+	color:#434751;
+	float:right;
+	width:49%;
+	text-align:right;
+}
+
+.caution-title {
+	color:#e8b75b;
+	border-bottom-color:#e8b75b;
+	margin-top:40px;
+}
+
+.download-details li {
+	font-size:16px;
+	color:#8c8c8c;
+}
+
+.download-details li.bg-white {
+	background-color:#fff;
+}
+
+.download-details li a {
+	color:#598ce0;
+}
+
+.header-inner {
+	position:relative;
+}
+
+.header-inner .main-nav > li > a {
+	padding-bottom:0;
+}
+
+.welcome-message {
+	background:#fbfbfc;
+	border-bottom:6px solid #f5f5f7;
+	padding:30px 0;
+}
+
+.welcome-message .wrapper {
+	position:relative;
+}
+
+.welcome-message .close-msg {
+	position:absolute;
+	top:0;
+	right:15px;
+	color:#a8a7a7;
+}
+
+.welcome-message h2 {
+	font-size:22px;
+	color:#313448;
+	text-align:center;
+	font-weight:500;
+}
+
+.welcome-message p {
+	color:#8e8c8c;
+	text-align:center;
+	font-size:18px;
+	max-width:870px;
+	margin:10px auto 0;
+}
+
+.leftbar {
+	width:190px;
+	float:left;
+	padding:30px 0;
+}
+
+a.start-disc-btn {
+	font-size:14px;
+	font-weight:500;
+	display:block;
+	padding:10px;
+	background:#5a8de2;
+	text-align:center;
+	color:#fff;
+	border-radius:5px;
+}
+
+.disc-options {
+	list-style:none;
+	padding-top:20px;
+}
+
+.disc-options li {
+	font-size:14px;
+	margin-top:10px;
+	color:#8c8c8c;
+	font-weight:500;
+}
+
+.disc-options li span {
+	font-size:18px;
+	margin-right:5px;
+	display:inline-block;
+	vertical-align:text-bottom;
+}
+
+.disc-options li span:before {
+	display:block;
+	line-height:18px;s
+}
+
+.disc-options li.main-option {
+	color:#5a8de2;
+}
+
+.tag-options li {
+	font-weight:normal;
+}
+
+.disc-options li span.tag-icon {
+	width:16px;
+	height:16px;
+	border-radius:3px;
+	background:#f2f2f2;
+}
+
+.disc-options li span.blue-bg {
+	background:#87cee0;
+}
+
+.disc-options li span.green-bg {
+	background:#5dbeb2;
+}
+
+.disc-options li span.yellow-bg {
+	background:#e8b75b;
+}
+
+.disc-options li span.red-bg {
+	background:#de5350;
+}
+
+.disc-options li span.dark-blue-bg {
+	background:#5a8de2;
+}
+
+.disc-options li span.purple-bg {
+	background:#69649e;
+}
+
+.forum-content {
+	float:right;
+	width:calc(100% - 250px);
+}
+
+.forum-content {
+	padding:30px 0;
+}
+
+.sort-items {
+	float:left;
+}
+
+.sort-items a,
+.other-items a {
+	background:#ededed;
+	padding:10px 20px;
+	display:block;
+	font-weight:500;
+	font-size:12px;
+	color:#817d7f;
+	border-radius:3px;
+}
+
+.other-items a {
+	display:inline-block;
+	text-align:center;
+	padding:10px;
+}
+
+.other-items a span {
+	vertical-align:middle;
+	font-size:14px;
+}
+
+.other-items a span:before {
+	display:block;
+	line-height:14px!important;
+}
+
+.sort-items a span {
+	vertical-align:middle;
+	margin-left:10px;
+}
+
+.other-items {
+	float:right;
+}
+
+.profile-image {
+	width:36px;
+	height:36px;
+	background-color:#e9e9ea;
+	background-position:center center;
+	background-size:cover;
+	display:block;
+	float:left;
+	border-radius:100%;
+}
+
+.forum-list {
+	list-style:none;
+}
+
+.forum-list li {
+	margin-top:20px;
+}
+
+.forum-item-details {
+	width:calc(100% - 50px);
+	float:right;
+	padding-right:270px;
+	position:relative;
+}
+
+.forum-item-title {
+	font-size:18px;
+	font-weight:normal;
+	color:#313347;
+}
+
+.forum-timestamp {
+	font-weight:normal;
+	font-size:12px;
+	color:#8d8c8c;
+}
+
+.forum-timestamp span {
+	margin-right:5px;
+	font-size:14px;
+	vertical-align:middle;
+}
+
+.forum-meta {
+	text-align:right;
+	width:250px;
+	top:0;
+	right:0;
+	position:absolute;
+}
+
+.item-forum-comments {
+	display:inline-block;
+	width:90px;
+	font-weight:bold;
+	font-size:12px;
+	color:#ddddde;
+	text-align:left;
+	padding-left:10px;
+}
+
+.item-forum-comments span {
+	font-size:14px;
+	margin-right:5px;
+	vertical-align:middle;
+}
+
+.load-more-btn2 {
+	padding:40px 0;
+	text-align:center;
+}
+
+.load-more-btn2 a {
+	display:inline-block;
+	padding:10px 20px;
+	background:#ededed;
+	border-radius:3px;
+	color:#7b7170;
+	font-size:14px;
+	font-weight:500;
+	text-transform:capitalize;
+}
+
+a.account-links {
+	padding:5px 0;
+	float:right;
+	font-size:18px;
+	color:#a3a4a9;
+	display:inline-block;
+	vertical-align:middle;
+}
+
+a.account-links {
+	margin-right:10px;
+}
+
+.main-page-title span {
+	font-family:'Haiku', 'Proxima Nova', Arial, Helvetica, sans-serif;
+	font-size:53px;
+	color:#de5350;
+	display:block;
+	text-transform:none;
+	margin-bottom:-50px;
+	position:relative;
+	z-index:1;
+}
+
+.main-page-title {
+	font-size:80px;
+	font-weight:bold;
+	text-transform:uppercase;
+	text-align:center;
+	color:#313448;
+	padding-top:80px;
+}
+
+.main-page-desc {
+	font-weight:100;
+	font-size:26px;
+	color:#313448;
+	text-align:center;
+	max-width:1080px;
+	margin:20px auto 0;
+}
+
+.main-page-desc span {
+	font-weight:normal;
+	font-size:32px;
+	margin-top:30px;
+	display:block;
+}
+
+.infographic {
+	margin-top:40px;
+	padding:80px 0 100px;
+	background:#f8f8f8;
+	text-align:center;
+}
+
+.infographic-val {
+	font-weight:bold;
+	text-transform:uppercase;
+	font-size:93px;
+	color:#e8b75b;
+	display:inline-block;
+}
+
+.infographic-val span {
+	font-size:12px;
+	display:block;
+	text-align:left;
+	color:#8d8c8c;
+	font-weight:normal;
+	margin-top:-40px;
+}
+
+.launch-info {
+	font-size:18px;
+	color:#313448;
+	text-align:center;
+	font-weight:100;
+	margin-top:80px;
+}
+
+.get-in-touch {
+	font-size:22px;
+	color:#313346;
+	text-align:center;
+	font-weight:100;
+	padding:30px 0 120px;
+}
+
+.get-in-touch a {
+	color:#598ce1;
+	font-weight:bold;
+}
+
+.banner-contact {
+	padding:140px 0 60px;
+}
+
+.team-title {
+	font-weight:500;
+	text-transform:uppercase;
+	color:#313347;
+	padding-top:30px;
+	border-top:6px solid #f5f5f7
+}
+
+.team-members {
+	font-size:18px;
+	color:#313347;
+	margin-top:20px;
+}
+
+.team-members span {
+	font-size:22px;
+	font-weight:500;
+}
+
+.contact-info {
+	font-size:22px;
+	color:#313346;
+	margin-top:40px;
+}
+
+.contact-info a {
+	font-weight:bold;
+}
+
+.contact-info-title {
+	font-size:28px;
+	font-weight:500;
+	color:#313346;
+	margin:60px 0 -20px;
+}
+
+.contact-sub-info {
+	font-size:18px;
+	color:#434651;
+	margin-top:20px;
+	padding-bottom:80px;
+}
+
+.contact-sub-info a {
+	color:#598ce0;
 }
